--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -115,12 +115,13 @@ services:
     depends_on:
       - db
     environment:
-      MYSQL_HOST: ${MYSQL_HOST}
+      DB_HOST: ${DB_HOST}
       MYSQL_PORT: ${MYSQL_PORT}
       DJANGO_DATABASE: ${DJANGO_DATABASE}
       DJANGO_USER: ${DJANGO_USER}
       DJANGO_PASSWORD: ${DJANGO_PASSWORD}
     volumes:
+      - ./django:/app
       - ./static:/app/static
     ports:
       - "127.0.0.1:8888:8888"
