--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,15 @@
-djangorestframework==3.14.0
+asgiref==3.7.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 dj-stripe==2.7.3
+Django==4.2.2
+djangorestframework==3.14.0
+idna==3.4
+jsonfield==3.1.0
+mysqlclient==2.1.1
+pytz==2023.3
+requests==2.31.0
+sqlparse==0.4.4
 stripe==4.2.0
-mysqlclient==2.1.1 
+typing_extensions==4.6.3
+urllib3==2.0.3
