--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,22 +52,37 @@ server {
     
     add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
 
+    # drf
+    location /api-auth {
+        proxy_pass http://django/api-auth;
+    }
+
+    # drf
+    location /accounts {
+        proxy_pass http://django/accounts;
+    }
+
+    # django app
     location /api {
         proxy_pass http://django/api;
     }
 
+    # django backend
     location /admin {
         proxy_pass http://django/admin;
     }
 
+    # django stripe api
     location /stripe {
         proxy_pass http://django/stripe;
     }
 
+    # django static files
     location /static/ {
         alias /static/;
     }
 
+    # vue dev server
     location /sockjs-node {
         proxy_pass http://frontend:8080;
     }
