django snippets and api

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -102,6 +102,8 @@ services:
     restart: unless-stopped
     expose:
         - "3306"
+    ports:
+      - "127.0.0.1:3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
