--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name odinscall.icarostangent.lab;
+    server_name icaroslabs.com;
     server_tokens off;
     client_max_body_size 64M;
 
@@ -9,7 +9,7 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://hostrequest_uri;
     }
 }
 
@@ -23,7 +23,7 @@ upstream django {
 
 server {
     listen              443 ssl;
-    server_name         odinscall.icarostangent.lab;
+    server_name         icaroslabs.com;
 
     client_max_body_size 64M; 
 
@@ -38,16 +38,16 @@ server {
 
     # deny all;
 
-    ssl_certificate /etc/letsencrypt/live/odinscall.icarostangent.lab/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/odinscall.icarostangent.lab/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/icaroslabs.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/icaroslabs.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     proxy_redirect     off;
-    proxy_set_header   Host $host;
-    proxy_set_header   X-Real-IP $remote_addr;
-    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Host $server_name;
+    proxy_set_header   Host host;
+    proxy_set_header   X-Real-IP remote_addr;
+    proxy_set_header   X-Forwarded-For proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Host server_name;
     proxy_set_header   X-Forwarded-Proto https;
     
     add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
