--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-disqus": "^5.1.0",
     "vue-router": "^4.0.0-0",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0-0"
