--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -7,6 +7,8 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 cryptography==41.0.1
 decorator==5.1.1
+defusedxml==0.7.1
+dj-rest-auth==4.0.1
 dj-stripe==2.7.3
 Django==3.2.20
 django-extensions==3.2.3
@@ -28,6 +30,7 @@ jedi==0.18.2
 jsonfield==3.1.0
 matplotlib-inline==0.1.6
 mysqlclient==2.1.1
+oauthlib==3.2.2
 parso==0.8.3
 pexpect==4.8.0
 phonenumbers==8.13.15
@@ -41,9 +44,12 @@ purl==1.6
 pycountry==22.3.5
 pycparser==2.21
 Pygments==2.15.1
+PyJWT==2.7.0
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
+requests-oauthlib==1.3.1
 six==1.16.0
 sorl-thumbnail==12.6.3
 sqlparse==0.4.4
