--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,6 +53,11 @@ server {
     add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
 
     # drf
+    location /dj-rest-auth/ {
+        proxy_pass http://django/dj-rest-auth/;
+    }
+
+    # drf
     location /api-auth {
         proxy_pass http://django/api-auth;
     }
