--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name odinscall.icarostangent.lab;
+    server_name icaroslabs.com;
     server_tokens off;
     client_max_body_size 64M;
 
@@ -23,7 +23,7 @@ upstream django {
 
 server {
     listen              443 ssl;
-    server_name         odinscall.icarostangent.lab;
+    server_name         icaroslabs.com;
 
     client_max_body_size 64M; 
 
@@ -38,8 +38,8 @@ server {
 
     # deny all;
 
-    ssl_certificate /etc/letsencrypt/live/odinscall.icarostangent.lab/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/odinscall.icarostangent.lab/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/icaroslabs.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/icaroslabs.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -52,47 +52,16 @@ server {
     
     add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
 
-    # drf
-    location /dj-rest-auth/ {
-        proxy_pass http://django/dj-rest-auth/;
-    }
-
-    # drf
-    location /api-auth {
-        proxy_pass http://django/api-auth;
-    }
-
-    # drf
-    location /accounts {
-        proxy_pass http://django/accounts;
-    }
-
     # django app
     location /api {
         proxy_pass http://django/api;
     }
 
-    # django app
-    location /snippets {
-        proxy_pass http://django/snippets;
-    }
-
-    # django app
-    location /subscriptions {
-        proxy_pass http://django/subscriptions;
-    }
-    
-    
     # django backend
     location /admin {
         proxy_pass http://django/admin;
     }
-
-    # django stripe api
-    location /stripe {
-        proxy_pass http://django/stripe;
-    }
-
+    
     # django static files
     location /static/ {
         alias /static/;
