--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.7.2
 asttokens==2.2.1
+async-timeout==4.0.2
 Babel==2.12.1
 backcall==0.2.0
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.6
 cryptography==41.0.1
 decorator==5.1.1
 defusedxml==0.7.1
@@ -17,7 +19,9 @@ django-extra-views==0.14.0
 django-haystack==3.2.1
 django-oscar==3.2
 django-phonenumber-field==6.4.0
+django-prometheus==2.3.1
 django-rest-knox==4.2.0
+django-rq==2.8.1
 django-tables2==2.3.4
 django-treebeard==4.7
 django-widget-tweaks==1.4.12
@@ -38,6 +42,7 @@ pexpect==4.8.0
 phonenumbers==8.13.15
 pickleshare==0.7.5
 Pillow==9.5.0
+prometheus-client==0.17.1
 prompt-toolkit==3.0.38
 psycopg2==2.9.6
 ptyprocess==0.7.0
@@ -50,8 +55,10 @@ PyJWT==2.7.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3
+redis==4.6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rq==1.15.1
 six==1.16.0
 sorl-thumbnail==12.6.3
 sqlparse==0.4.4
