--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -109,6 +109,11 @@ services:
       STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_DB: ${REDIS_DB}
+      REDIS_USER: ${REDIS_USER}
+      REDIS_PASS: ${REDIS_PASS}
     volumes:
       - ./django:/app
       - ./static:/app/static
@@ -116,6 +121,32 @@ services:
       - "127.0.0.1:8888:8888"
     expose:
       - "8888"
+    depends_on:
+      - db
+    restart: unless-stopped
+
+  django-worker:
+    command: python manage.py rqworker
+    build:
+      context: ./django
+      dockerfile: Dockerfile.development
+    environment:
+      TARGET_URL: ${TARGET_URL}
+      DB_HOST: ${DB_HOST}
+      MYSQL_PORT: ${MYSQL_PORT}
+      DJANGO_DATABASE: ${DJANGO_DATABASE}
+      DJANGO_USER: ${DJANGO_USER}
+      DJANGO_PASSWORD: ${DJANGO_PASSWORD}
+      STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_DB: ${REDIS_DB}
+      REDIS_USER: ${REDIS_USER}
+      REDIS_PASS: ${REDIS_PASS}
+    volumes:
+      - ./django:/app
     depends_on:
       - db
     restart: unless-stopped
@@ -213,25 +244,27 @@ services:
     ports:
       - 127.0.0.1:8086:8086
     volumes:
-      - influxdb-data:/var/lib/influxdb
+      - influxdb_data:/var/lib/influxdb
     environment:
       INFLUXDB_DB: ${INFLUXDB_NAME}
       INFLUXDB_ADMIN_USER: ${INFLUXDB_USER}
       INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASS}
 
   grafana:
-    image: grafana/grafana:6.5.2
+    image: grafana/grafana:latest
     restart: unless-stopped
     volumes:
       - grafana_data:/var/lib/grafana
+    environment:
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
+      GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-worldmap-panel'
     ports:
       - 127.0.0.1:3060:3000
-    environment:
-      GF_INSTALL_PLUGINS: "grafana-clock-panel,grafana-simple-json-datasource"
 
 volumes:
   db_data: {}
   redis_data: {}
   prometheus_data: {}
   grafana_data: {}
-  influxdb-data: {}
+  influxdb_data: {}
