--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -11,6 +11,9 @@ services:
       DB_DATABASE: ${DJANGO_DATABASE}
     volumes:
       - ./scheduler-scan:/app
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   scheduler-cleaner:
@@ -23,6 +26,9 @@ services:
       DB_DATABASE: ${MYSQL_DATABASE}
     volumes:
       - ./scheduler-cleaner:/app
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   mailer:
@@ -36,6 +42,9 @@ services:
       TARGET_URL: ${TARGET_URL}
     volumes:
       - ./mailer:/app
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   scanner:
@@ -48,6 +57,9 @@ services:
       DB_DATABASE: ${DJANGO_DATABASE}
     volumes:
       - ./scanner:/app
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   cleaner:
@@ -60,6 +72,9 @@ services:
       DB_DATABASE: ${MYSQL_DATABASE}
     volumes:
       - ./cleaner:/app
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   redis:
@@ -68,6 +83,9 @@ services:
       - redis_data:/data
     expose:
       - "6379"
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   redis-commander:
@@ -94,6 +112,9 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
 
   django:
     command: python manage.py runserver 0.0.0.0:8888
@@ -125,6 +146,9 @@ services:
       - "8888"
     depends_on:
       - db
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   django-worker:
@@ -152,6 +176,9 @@ services:
       - ./django:/app
     depends_on:
       - db
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   wordpress:
@@ -177,6 +204,9 @@ services:
     depends_on:
       - db
       - redis
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   phpmyadmin:
@@ -201,16 +231,23 @@ services:
       DOMAIN_NAME: ${DOMAIN_NAME}
       TARGET_URL: ${TARGET_URL}
       STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     restart: unless-stopped
 
   nginx:
-    image: openresty/openresty:latest
+    build:
+      context: ./nginx
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf:/etc/nginx/conf.d
       - ./wordpress/wp-content:/var/www/html/wp-content
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
       - ./static:/static
+      # - nginx_data:/usr/local/openresty/nginx/logs
+      # - geoupdate_data:/var/lib/GeoIP/
     ports:
       - "80:80"
       - "443:443"
@@ -218,11 +255,14 @@ services:
       DOMAIN_NAME: ${DOMAIN_NAME}
       DOLLAR: ${DOLLAR}
     restart: unless-stopped
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     command:
       [
         "/bin/sh",
         "-c",
-        "echo hello world && envsubst < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && exec nginx -g 'daemon off;'"
+        "echo hello world && envsubst < /etc/nginx/conf.d/certninja.conf.template > /etc/nginx/conf.d/certninja.conf && exec nginx -g 'daemon off;'"
       ]
 
   certbot:
@@ -231,6 +271,9 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   prometheus:
@@ -241,33 +284,89 @@ services:
       - ./prometheus/:/etc/prometheus/
     ports:
       - 127.0.0.1:9090:9090
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
 
-  influxdb:
-    image: influxdb:latest
-    ports:
-      - 127.0.0.1:8086:8086
-    volumes:
-      - influxdb_data:/var/lib/influxdb
-    environment:
-      INFLUXDB_DB: ${INFLUXDB_NAME}
-      INFLUXDB_ADMIN_USER: ${INFLUXDB_USER}
-      INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASS}
+  # influxdb:
+  #   image: influxdb:1.8
+  #   ports:
+  #     - 127.0.0.1:8086:8086
+  #   volumes:
+  #     - influxdb_data:/var/lib/influxdb
+  #   environment:
+  #     INFLUXDB_DB: ${INFLUXDB_NAME}
+  #     INFLUXDB_ADMIN_USER: ${INFLUXDB_USER}
+  #     INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASS}
 
   grafana:
     image: grafana/grafana:latest
     restart: unless-stopped
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
     environment:
       GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
       GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
       GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-worldmap-panel'
     ports:
       - 127.0.0.1:3060:3000
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
+
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - 127.0.0.1:3100:3100
+    command: -config.file=/etc/loki/local-config.yaml
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
+
+  promtail:
+    image:  grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - ./promtail:/etc/promtail
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/promtail/docker-config.yaml
+    depends_on:
+      - loki
+    labels:
+      logging: "promtail"
+      logging_jobname: "containerlogs"
+
+  # geoip2influx:
+  #   image: gilbn/geoip2influx:latest
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - TZ=America/Los_Angeles
+  #     - INFLUX_HOST=${INFLUXDB_HOST}
+  #     - INFLUX_HOST_PORT=${INFLUXDB_PORT}
+  #     - MAXMINDDB_LICENSE_KEY=${MAXMINDDB_LICENSE_KEY}
+  #   volumes:
+  #     # - /path/to/appdata/geoip2influx:/config
+  #     - nginx_data:/config/log/nginx/
+  #   restart: unless-stopped
+
+  # geoupdate:
+  #   image: maxmindinc/geoipupdate:latest
+  #   environment:
+  #     - GEOIPUPDATE_ACCOUNT_ID=${GEOIPUPDATE_ACCOUNT_ID}
+  #     - GEOIPUPDATE_LICENSE_KEY=${MAXMINDDB_LICENSE_KEY}
+  #     - GEOIPUPDATE_EDITION_IDS=${GEOIPUPDATE_EDITION_IDS}
+  #   volumes:
+  #     - geoupdate_data:/usr/share/GeoIP
+  #   restart: unless-stopped
 
 volumes:
   db_data: {}
   redis_data: {}
   prometheus_data: {}
   grafana_data: {}
-  influxdb_data: {}
+  # influxdb_data: {}
+  # geoupdate_data: {}
+  # nginx_data: {}
