--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,106 +1,46 @@
-server {
-    listen 80;
-    server_name icaroslabs.com;
-    server_tokens off;
-    client_max_body_size 64M;
+load_module modules/ngx_http_geoip2_module.so;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+user  nginx;
+worker_processes  auto;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
 }
 
-upstream websocket {
-    server frontend:8080;
-}
 
-upstream django {
-    server django:8888;
-}
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-server {
-    listen              443 ssl;
-    server_name         icaroslabs.com;
-
-    client_max_body_size 64M; 
-
-    #jetpack
-    #allow 122.248.245.244/32;
-    #allow 54.217.201.243/32;
-    #allow 54.232.116.4/32;
-    #allow 192.0.80.0/20;
-    #allow 192.0.96.0/20;
-    #allow 192.0.112.0/20;
-    #allow 195.234.108.0/22;
-
-    # deny all;
-
-    ssl_certificate /etc/letsencrypt/live/icaroslabs.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/icaroslabs.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    proxy_redirect     off;
-    proxy_set_header   Host $host;
-    proxy_set_header   X-Real-IP $remote_addr;
-    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Host $server_name;
-    proxy_set_header   X-Forwarded-Proto https;
+    # log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                   '$status $body_bytes_sent "$http_referer" '
+    #                   '"$http_user_agent" "$http_x_forwarded_for"';
     
-    add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
-
-    # django app
-    location /api {
-        proxy_pass http://django/api;
+    geoip2 /config/geoip2db/GeoLite2-City.mmdb {
+        auto_reload 5m;
+        $geoip2_data_country_iso_code country iso_code;
+        $geoip2_data_city_name city names en;
     }
 
-    # django backend
-    location /admin {
-        proxy_pass http://django/admin;
-    }
-    
-    # django static files
-    location /static/ {
-        alias /static/;
-    }
+    log_format geoip2influx '$remote_addr - $remote_user [$time_local]'
+           '"$request" $status $body_bytes_sent'
+           '"$http_referer" $host "$http_user_agent"'
+           '"$request_time" "$upstream_connect_time"'
+           '"$geoip2_data_city_name" "$geoip2_data_country_iso_code"';
 
-    # vue dev server
-    location /sockjs-node {
-        proxy_pass http://frontend:8080;
-    }
+    # access_log  /var/log/nginx/access.log  main;
+    access_log /var/log/nginx/access.log geoip2influx;
 
-    location /wp-admin {
-        proxy_pass http://wordpress/wp-admin;
-    }
+    sendfile        on;
+    #tcp_nopush     on;
 
-    location /wp-login {
-        proxy_pass http://wordpress/wp-login;
-    }
+    keepalive_timeout  65;
 
-    location /wp-content {
-        alias /var/www/html/wp-content;
-    }
+    #gzip  on;
 
-    location /wp-json {
-        proxy_pass http://wordpress/wp-json;
-    }
-
-    location /wp-includes {
-        proxy_pass http://wordpress/wp-includes;
-    }
-
-    location /wp-cron {
-        proxy_pass http://wordpress/wp-cron;
-    }
-
-    location /xmlrpc.php {
-        proxy_pass http://wordpress/xmlrpc.php;
-    }
-
-    location / {
-        proxy_pass http://frontend:8080;
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
