--- a/nginx/conf/certninja.conf.template
+++ b/nginx/conf/certninja.conf.template
@@ -21,6 +21,10 @@ upstream django {
     server django:8888;
 }
 
+upstream frontend {
+    server frontend:5173;
+}
+
 server {
     listen              443 ssl;
     server_name         ${DOMAIN_NAME};
@@ -49,7 +53,7 @@ server {
     proxy_set_header   X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host ${DOLLAR}server_name;
     proxy_set_header   X-Forwarded-Proto https;
-    
+
     add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
 
     # django app
@@ -69,7 +73,10 @@ server {
 
     # vue dev server
     location /sockjs-node {
-        proxy_pass http://frontend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://frontend;
     }
 
     location /wp-admin {
@@ -97,6 +104,9 @@ server {
     }
 
     location / {
-        proxy_pass http://frontend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://frontend;
     }
 }
