--- a/nginx/conf/certninja.conf
+++ b/nginx/conf/certninja.conf
@@ -1,3 +1,8 @@
+  include mime.types;
+  types {
+      application/javascript js mjs;
+  }
+
 server {
     listen 80;
     server_name icaroslabs.com;
@@ -13,16 +18,12 @@ server {
     }
 }
 
-upstream websocket {
-    server frontend:8080;
-}
-
 upstream django {
     server django:8888;
 }
 
 upstream frontend {
-    server frontend:5173;
+    server frontend:8080;
 }
 
 server {
@@ -73,7 +74,6 @@ server {
 
     # vue dev server
     location /sockjs-node {
-        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -104,7 +104,14 @@ server {
         proxy_pass http://wordpress/wp-cron;
     }
 
+    location /node_modules {
+        alias /node_modules;
+    }
+
     location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_pass http://frontend;
     }
 }
