--- a/nginx/conf/certninja.conf.template
+++ b/nginx/conf/certninja.conf.template
@@ -1,3 +1,8 @@
+  include mime.types;
+  types {
+      application/javascript js mjs;
+  }
+
 server {
     listen 80;
     server_name ${DOMAIN_NAME};
@@ -13,16 +18,12 @@ server {
     }
 }
 
-upstream websocket {
-    server frontend:8080;
-}
-
 upstream django {
     server django:8888;
 }
 
 upstream frontend {
-    server frontend:5173;
+    server frontend:8080;
 }
 
 server {
@@ -101,6 +102,10 @@ server {
 
     location /wp-cron {
         proxy_pass http://wordpress/wp-cron;
+    }
+
+    location /node_modules {
+        alias /node_modules;
     }
 
     location / {
