--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -325,6 +325,9 @@ services:
     ports:
       - 127.0.0.1:3100:3100
     command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ./loki:/etc/loki
+      - loki_data:/loki
     labels:
       logging: "promtail"
       logging_jobname: "containerlogs"
@@ -372,6 +375,7 @@ volumes:
   redis_data: {}
   prometheus_data: {}
   grafana_data: {}
+  loki_data: {}
   # influxdb_data: {}
   # geoupdate_data: {}
   # nginx_data: {}
