--- a/nginx/conf/certninja.conf
+++ b/nginx/conf/certninja.conf
@@ -32,16 +32,24 @@ server {
 
     client_max_body_size 64M; 
 
-    #jetpack
-    #allow 122.248.245.244/32;
-    #allow 54.217.201.243/32;
-    #allow 54.232.116.4/32;
-    #allow 192.0.80.0/20;
-    #allow 192.0.96.0/20;
-    #allow 192.0.112.0/20;
-    #allow 195.234.108.0/22;
+    allow 172.19.0.1;
+    allow 98.167.27.84;
 
-    # deny all;
+    #stripe
+    allow 3.18.12.63;
+    allow 3.130.192.231;
+    allow 13.235.14.237;
+    allow 13.235.122.149;
+    allow 18.211.135.69;
+    allow 35.154.171.200;
+    allow 52.15.183.38;
+    allow 54.88.130.119;
+    allow 54.88.130.237;
+    allow 54.187.174.169;
+    allow 54.187.205.235;
+    allow 54.187.216.72;
+
+    deny all;
 
     ssl_certificate /etc/letsencrypt/live/icaroslabs.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/icaroslabs.com/privkey.pem;
