--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
+  scrape_interval: 5s
+  evaluation_interval: 5s
 rule_files:
 # - “first.rules”
 # - “second.rules”
@@ -10,6 +10,10 @@ scrape_configs:
     static_configs:
       - targets:
         - django:8888
+  - job_name: node
+    static_configs:
+      - targets: 
+        - 'node-exporter:9100'
 
 remote_write:
   - url: "http://influxdb:8086/api/v1/prom/write?db=app"
