--- a/nginx/conf/certninja.conf
+++ b/nginx/conf/certninja.conf
@@ -63,7 +63,7 @@ server {
     proxy_set_header   X-Forwarded-Host $server_name;
     proxy_set_header   X-Forwarded-Proto https;
 
-    add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; img-src 'self' secure.gravatar.com data:;";
+    add_header Content-Security-Policy-Report-Only: "default-src 'self' js.stripe.com; script-src 'self' js.stripe.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' js.stripe.com; frame-src https://js.stripe.com; data:;";
 
     # django app
     location /api {
