--- a/loki/local-config.yaml
+++ b/loki/local-config.yaml
@@ -14,6 +14,10 @@ common:
     kvstore:
       store: inmemory
 
+limits_config:
+  retention_period: 120h
+  deletion_mode: filter-and-delete
+
 compactor:
   working_directory: /loki/retention
   shared_store: filesystem
@@ -31,9 +35,6 @@ schema_config:
       index:
         prefix: index_
         period: 24h
-
-limits_config:
-  retention_period: 48h
 
 ruler:
   alertmanager_url: http://localhost:9093
