--- a/nginx/conf/certninja.conf
+++ b/nginx/conf/certninja.conf
@@ -5,7 +5,7 @@
 
 server {
     listen 80;
-    server_name icaroslabs.com;
+    server_name odinscall.com;
     server_tokens off;
     client_max_body_size 64M;
 
@@ -28,7 +28,7 @@ upstream frontend {
 
 server {
     listen              443 ssl;
-    server_name         icaroslabs.com;
+    server_name         odinscall.com;
 
     client_max_body_size 64M; 
 
@@ -51,8 +51,8 @@ server {
 
     #deny all;
 
-    ssl_certificate /etc/letsencrypt/live/icaroslabs.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/icaroslabs.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/odinscall.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/odinscall.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
