delete geoip stuff

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,32 +15,14 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    # log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                   '$status $body_bytes_sent "$http_referer" '
-    #                   '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    geoip2 /config/geoip2db/GeoLite2-City.mmdb {
-        auto_reload 5m;
-        $geoip2_data_country_iso_code country iso_code;
-        $geoip2_data_city_name city names en;
-    }
-
-    log_format geoip2influx '$remote_addr - $remote_user [$time_local]'
-           '"$request" $status $body_bytes_sent'
-           '"$http_referer" $host "$http_user_agent"'
-           '"$request_time" "$upstream_connect_time"'
-           '"$geoip2_data_city_name" "$geoip2_data_country_iso_code"';
-
-    # access_log  /var/log/nginx/access.log  main;
-    access_log /var/log/nginx/access.log geoip2influx;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush     on;
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
 }
