add host to scanner app

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -60,6 +60,8 @@ services:
     labels:
       logging: "promtail"
       logging_jobname: "containerlogs"
+    extra_hosts:
+      - ${DOMAIN_NAME}:${PUBLIC_IP}
     restart: unless-stopped
 
   cleaner:
