downgrade mysql and allow null values

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -100,7 +100,7 @@ services:
     restart: unless-stopped
 
   db:
-    image: mysql:latest
+    image: mysql:8.2.0-oraclelinux8
     volumes:
       - db_data:/var/lib/mysql
       - ./db/backup:/docker-entrypoint-initdb.d
