--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,70 +1,71 @@
-asgiref>=3.7.2
-asttokens>=2.2.1
-async-timeout>=4.0.2
-Babel>=2.12.1
-backcall>=0.2.0
-certifi>=2023.5.7
-cffi>=1.15.1
-charset-normalizer>=3.1.0
-click>=8.1.6
-cryptography>=41.0.1
-decorator>=5.1.1
-defusedxml>=0.7.1
-dj-rest-auth>=4.0.1
-dj-stripe>=2.7.3
-Django>=3.2.20
-django-allauth>=0.54.0
-django-extensions>=3.2.3
-django-extra-views>=0.14.0
-django-haystack>=3.2.1
-django-oscar>=3.2
-django-phonenumber-field>=6.4.0
-django-prometheus>=2.3.1
-django-rest-knox>=4.2.0
-django-rq>=2.8.1
-django-tables2>=2.3.4
-django-treebeard>=4.7
-django-widget-tweaks>=1.4.12
-djangorestframework>=3.14.0
-djangorestframework-simplejwt>=5.2.2
-executing>=1.2.0
-factory-boy>=3.2.1
-Faker>=18.13.0
-idna>=3.4
-ipython>=8.14.0
-jedi>=0.18.2
-jsonfield>=3.1.0
-matplotlib-inline>=0.1.6
-mysqlclient>=2.1.1
-oauthlib>=3.2.2
-parso>=0.8.3
-pexpect>=4.8.0
-phonenumbers>=8.13.15
-pickleshare>=0.7.5
-Pillow>=9.5.0
-prometheus-client>=0.17.1
-prompt-toolkit>=3.0.38
-psycopg2>=2.9.6
-ptyprocess>=0.7.0
-pure-eval>=0.2.2
-purl>=1.6
-pycountry>=22.3.5
-pycparser>=2.21
-Pygments>=2.15.1
-PyJWT>=2.7.0
-python-dateutil>=2.8.2
-python3-openid>=3.2.0
-pytz>=2023.3
-redis>=4.6.0
-requests>=2.31.0
-requests-oauthlib>=1.3.1
-rq>=1.15.1
-six>=1.16.0
-sorl-thumbnail>=12.6.3
-sqlparse>=0.4.4
-stack-data>=0.6.2
-stripe>=4.2.0
-traitlets>=5.9.0
-typing_extensions>=4.6.3
-urllib3>=2.0.3
-wcwidth>=0.2.6
+asgiref==3.7.2
+asttokens==2.4.1
+async-timeout==4.0.3
+Babel==2.14.0
+backcall==0.2.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.2
+decorator==5.1.1
+defusedxml==0.7.1
+dj-rest-auth==5.0.2
+dj-stripe==2.8.3
+Django==4.2.9
+django-allauth==0.60.1
+django-extensions==3.2.3
+django-extra-views==0.14.0
+django-haystack==3.2.1
+django-oscar==3.2.3
+django-phonenumber-field==6.4.0
+django-prometheus==2.3.1
+django-rest-knox==4.2.0
+django-rq==2.10.1
+django-tables2==2.3.4
+django-treebeard==4.7.1
+django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+exceptiongroup==1.2.0
+executing==2.0.1
+factory-boy==3.2.1
+Faker==22.6.0
+idna==3.6
+ipython==8.18.1
+jedi==0.19.1
+jsonfield==3.1.0
+matplotlib-inline==0.1.6
+mysqlclient==2.2.1
+oauthlib==3.2.2
+parso==0.8.3
+pexpect==4.9.0
+phonenumbers==8.13.29
+pickleshare==0.7.5
+pillow==10.2.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+purl==1.6
+pycountry==23.12.11
+pycparser==2.21
+Pygments==2.17.2
+PyJWT==2.8.0
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2024.1
+redis==5.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rq==1.15.1
+six==1.16.0
+sorl-thumbnail==12.10.0
+sqlparse==0.4.4
+stack-data==0.6.3
+stripe==4.2.0
+traitlets==5.14.1
+typing_extensions==4.9.0
+urllib3==2.2.0
+wcwidth==0.2.13
