--- a/scanner/requirements.txt
+++ b/scanner/requirements.txt
@@ -1,9 +1,18 @@
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Deprecated==1.2.13
+greenlet==3.0.3
+idna==3.6
 mysql-connector-python==8.0.28
+mysqlclient==2.1.0
 packaging==21.3
 protobuf==3.19.4
 pyparsing==3.0.7
+pytz==2024.1
 redis==4.1.1
+requests==2.31.0
+setuptools==69.0.3
+SQLAlchemy==1.4.32
+urllib3==2.2.1
+wheel==0.42.0
 wrapt==1.14.0
-sqlalchemy==1.4.32
-mysqlclient==2.1.0
