--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -230,6 +230,8 @@ services:
       - ./frontend:/usr/src/app
     expose:
       - "8080"
+    ports:
+      - "127.0.0.1:8080:8080"
     environment:
       CHOKIDAR_USEPOLLING: 'true'
     labels:
