--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ events {
 
 
 http {
-    include       /etc/nginx/mime.types;
+    include       /etc/mime.types;
     default_type  application/octet-stream;
     access_log  /var/log/nginx/access.log  main;
 
